#438 minor UI fixes for spacing, width and margin for delta

--- a/santa-fe/src/app/modules/structure/components/target-bar.component.scss
+++ b/santa-fe/src/app/modules/structure/components/target-bar.component.scss
@@ -55,11 +55,12 @@
   &__additionalMetricTargetData {
     @include mix_fixed_div(absolute, $z_index_base_item);
     top: $spacing_xx_small;
-    right: -5.5rem;
+    right: -6rem;
     display: flex;
     flex: 1 1 auto;
     flex-direction: column;
-    margin-bottom: $spacing_x_small;
+    min-width: 5rem;
+    margin-bottom: $spacing_small;
       &-type {
         margin-bottom: $spacing_xx_small;
       }
